# ecard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ecard.repos
ecard/: CMakeLists.txt  package.xml
ecard/config/: rviz2.rviz  rviz2_default.rviz
ecard/config/gaze_correlation/: gaze_correlation.yaml
ecard/config/gpf/: gpf.yaml
ecard/config/head_pose/: pipeline.yaml  pipeline_people.yaml
ecard/config/moveit/: moveit_cpp.yaml  rviz2.rviz  start_positions.yaml
ecard/config/moveit/panda_moveit_config/: panda.srdf
ecard/config/moveit/panda_urdf/: panda.urdf
ecard/config/openface/: openface_rgbd_head_pose.yaml  openface_separate_calibration.yaml
ecard/config/rgbd_gaze/: rgbd_gaze.yaml
ecard/config/rgbd_gaze/calibration/: point_publisher.yaml  rgbd_gaze_calibration.yaml  rgbd_gaze_calibration_eyeball.yaml  rgbd_gaze_calibration_kappa.yaml  rviz2.rviz  simple_marker_detector.yaml
ecard/config/rgbd_gaze/pupil_centre/: pupil_centre.yaml
ecard/config/rs/: rs_face_d415.yaml  rs_scene_d435.yaml
ecard/launch/: calibrate_eyeball.launch.py  calibrate_kappa.launch.py  calibrate_rgbd_gaze.launch.py  ecard.launch.py  manipulation.launch.py  rgbd_gaze_accuracy.launch.py  rgbd_gaze_calibration.launch.py  run_moveit_cpp.launch.py  rviz2.launch.py
ecard/launch/gaze_correlation/: gaze_correlation.launch.py
ecard/launch/gpf/: gpf.launch.py
ecard/launch/head_pose/: head_pose.launch.py  pipeline_people.launch.py
ecard/launch/openface/: openface_eye_region.launch.py  openface_rgbd_eyelid_contour.launch.py  openface_rgbd_head_pose.launch.py  openface_separate.launch.py
ecard/launch/openface_eye_regions/: eye_region_extractor.launch.py  openface_separate.launch.py
ecard/launch/openvino/: head_pose.launch.py
ecard/launch/rgbd_gaze/: accuracy.launch.py  calibration.launch.py  calibration_eyeball.launch.py  calibration_kappa.launch.py  rgbd_gaze.launch.py
ecard/launch/rs/: rs.launch.py  rs_face_d415.launch.py  rs_scene_d435.launch.py
ecard/src/: ecard.cpp
ecard/users/: default.yaml
scripts/: additional_dependencies.bash  install_opencv_master.bash  install_ros1_distro_melodic.bash  install_ros1_openface.bash  install_ros2_distro_eloquent.bash  install_ros2_moveit2.bash  install_ros2_openface.bash  install_ros2_openvino.bash  install_ros2_realsense.bash
